--- a/public/access/homekit/index.html
+++ b/public/access/homekit/index.html
@@ -35,17 +35,17 @@
     <link href="../../access/homekit/index.xml" rel="alternate" type="application/rss+xml" title="HA Box桥接米家设备到HomeKit :: HaBox 技术支持站">
     <link href="../../access/homekit/index.print.html" rel="alternate" type="text/html" title="HA Box桥接米家设备到HomeKit :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725503859" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725503859" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725503859" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725503859" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725503859" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725503859" rel="stylesheet">
-    <link href="../../css/fonts.css?1725503859" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725503859" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725503859" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725503859" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725503859" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725503859" rel="stylesheet">
-    <link href="../../css/print.css?1725503859" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1725503859"></script>
+    <link href="../../css/fontawesome-all.min.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725508239" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725508239" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725508239" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725508239" rel="stylesheet">
+    <link href="../../css/fonts.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725508239" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725508239" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725508239" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725508239" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725508239" rel="stylesheet">
+    <link href="../../css/print.css?1725508239" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1725508239"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -129,27 +129,27 @@
 <p>接下来，我们通过 HomeKit Bridge 将 Home Assistant 中设备桥接到 HomeKit。</p>
 <p>首先，我们要添加 HomeKit Bridge 集成。点击“配置”，进入“设备与服务”页面。在“集成”选项下，点右下角“添加集成”
 然后输入“homekit” 或者&quot;apple&quot;</p>
-<p><a href="#R-image-91ffb285f60bc39e175dc38cac765197" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/2405b767378b89b3a841ce13334d05cfc9061cf4.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-91ffb285f60bc39e175dc38cac765197"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/2405b767378b89b3a841ce13334d05cfc9061cf4.jpeg"></a></p>
+<p><a href="#R-image-3407093e1ae9c0c92a51253775173d54" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/2405b767378b89b3a841ce13334d05cfc9061cf4.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-3407093e1ae9c0c92a51253775173d54"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/2405b767378b89b3a841ce13334d05cfc9061cf4.jpeg"></a></p>
 <p>点击“Apple”</p>
-<p><a href="#R-image-300e0115c596f9fa315758af47c4a538" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a0787982f4a5381754deb552770fda923788b729.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-300e0115c596f9fa315758af47c4a538"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a0787982f4a5381754deb552770fda923788b729.jpeg"></a></p>
+<p><a href="#R-image-1c2d14494eb8aac914eb959247a9f2ca" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a0787982f4a5381754deb552770fda923788b729.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1c2d14494eb8aac914eb959247a9f2ca"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a0787982f4a5381754deb552770fda923788b729.jpeg"></a></p>
 <p>点击添加“HomeKit Bridge 集成”，按照指引完成添加。</p>
 <p>需要注意是的，如果你有温湿度传感器，点击“要添加的域”下拉选项，记得勾选“Sensor”，这个选项默认是不勾选的。</p>
-<p><a href="#R-image-aa4b2564d925e4eab33c3882482f5461" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/b7f3383a80e1a1f04f3b092af7b8d0054d1eaa2a.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-aa4b2564d925e4eab33c3882482f5461"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/b7f3383a80e1a1f04f3b092af7b8d0054d1eaa2a.jpeg"></a></p>
+<p><a href="#R-image-b66ef403809de42f545005a9f2e63e3f" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/b7f3383a80e1a1f04f3b092af7b8d0054d1eaa2a.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b66ef403809de42f545005a9f2e63e3f"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/b7f3383a80e1a1f04f3b092af7b8d0054d1eaa2a.jpeg"></a></p>
 <p>添加 HomeKit Bridge 集成成功后，点击界面左下角的通知按钮。查看 homekit 的配对二维码。</p>
-<p><a href="#R-image-2bc658744859dbfe9ced82e4b00d7baf" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/b08589161582a58e794c2cb626c3ec44e2299ce0.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-2bc658744859dbfe9ced82e4b00d7baf"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/b08589161582a58e794c2cb626c3ec44e2299ce0.jpeg"></a></p>
-<p><a href="#R-image-11fab5ed417253cf1d6eee77392c816c" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/3718c6668fa3b68c066162da84fe46579fd3c855.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-11fab5ed417253cf1d6eee77392c816c"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/3718c6668fa3b68c066162da84fe46579fd3c855.jpeg"></a></p>
+<p><a href="#R-image-b621eeba98250761ba716791133aed37" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/b08589161582a58e794c2cb626c3ec44e2299ce0.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b621eeba98250761ba716791133aed37"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/b08589161582a58e794c2cb626c3ec44e2299ce0.jpeg"></a></p>
+<p><a href="#R-image-ad84524daa22c0ed8cfaae6c71d5ddc7" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/3718c6668fa3b68c066162da84fe46579fd3c855.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ad84524daa22c0ed8cfaae6c71d5ddc7"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/3718c6668fa3b68c066162da84fe46579fd3c855.jpeg"></a></p>
 <p>打开“家庭”应用，点击左上角的“+”号，选择“添加配件”。扫描上个步骤的得到的二维码，点击“添加到家庭”。在加入过程中，可能会提示“未认证设备”，点击“仍要添加”。然后完成剩余步骤，逐个添加设备。完成后，你就能能用Siri控制你的智能设备了。</p>
-<p><a href="#R-image-39bf88e189e74cbdf35a9a696a5ff271" class="lightbox-link"><img alt="桥接homekit6.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/46651d4a69934aadba8c46c32b8d84a2ac6ce8ce.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-39bf88e189e74cbdf35a9a696a5ff271"><img alt="桥接homekit6.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/46651d4a69934aadba8c46c32b8d84a2ac6ce8ce.jpeg"></a></p>
-<p><a href="#R-image-35d8d538975c23121c46b0a14892cf97" class="lightbox-link"><img alt="桥接homekit7.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d9897e682d94ac340ab1a1aff6821f0dd09b2144.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-35d8d538975c23121c46b0a14892cf97"><img alt="桥接homekit7.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d9897e682d94ac340ab1a1aff6821f0dd09b2144.jpeg"></a></p>
-<p><a href="#R-image-128d9a835f3f40a87f6cd93463797af6" class="lightbox-link"><img alt="桥接homekit8.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a07d8ff1e7af35d33193fdba56efa787ba360d89.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-128d9a835f3f40a87f6cd93463797af6"><img alt="桥接homekit8.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a07d8ff1e7af35d33193fdba56efa787ba360d89.jpeg"></a></p>
+<p><a href="#R-image-9d364a01738e87bed1430920d12785d2" class="lightbox-link"><img alt="桥接homekit6.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/46651d4a69934aadba8c46c32b8d84a2ac6ce8ce.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9d364a01738e87bed1430920d12785d2"><img alt="桥接homekit6.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/46651d4a69934aadba8c46c32b8d84a2ac6ce8ce.jpeg"></a></p>
+<p><a href="#R-image-32f33bd9f29c710b381910b01860634b" class="lightbox-link"><img alt="桥接homekit7.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d9897e682d94ac340ab1a1aff6821f0dd09b2144.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-32f33bd9f29c710b381910b01860634b"><img alt="桥接homekit7.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d9897e682d94ac340ab1a1aff6821f0dd09b2144.jpeg"></a></p>
+<p><a href="#R-image-247d032ba3a48d7b8d7a4f5b9c9662af" class="lightbox-link"><img alt="桥接homekit8.png" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a07d8ff1e7af35d33193fdba56efa787ba360d89.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-247d032ba3a48d7b8d7a4f5b9c9662af"><img alt="桥接homekit8.png" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a07d8ff1e7af35d33193fdba56efa787ba360d89.jpeg"></a></p>
 <p>大功告成！</p>
 
             <footer class="footline">
@@ -222,13 +222,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1725503859" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1725503859" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725503859" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1725503859" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1725503859" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1725503859" defer></script>
-        <script src="../../js/search.js?1725503859" defer></script>
+        <script src="../../js/auto-complete.js?1725508239" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1725508239" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725508239" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1725508239" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1725508239" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1725508239" defer></script>
+        <script src="../../js/search.js?1725508239" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -245,6 +245,8 @@
           <li data-nav-id="/access/mijia/index.html" class=""><a class="padding" href="../../access/mijia/index.html">将米家设备接入HomeAssistant<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/network/index.html" class=""><input type="checkbox" id="R-section-45bc2156b004e8b8b20d1da2c598bd4d" aria-controls="R-subsections-45bc2156b004e8b8b20d1da2c598bd4d"><label for="R-section-45bc2156b004e8b8b20d1da2c598bd4d"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单网络技术</span></label><a class="padding" href="../../network/index.html">网络技术<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-45bc2156b004e8b8b20d1da2c598bd4d" class="morespace collapsible-menu">
           <li data-nav-id="/network/habox-over-greatwall/index.html" class=""><a class="padding" href="../../network/habox-over-greatwall/index.html">Ha盒子配置科学上网<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/network/linux-partition/index.html" class=""><a class="padding" href="../../network/linux-partition/index.html">linux下无损扩容分区方法<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/network/docker-pull/index.html" class=""><a class="padding" href="../../network/docker-pull/index.html">从 Docker Hub 快速拉取镜像<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/free-vless-node/index.html" class=""><a class="padding" href="../../network/free-vless-node/index.html">搭建免费科学上网节点<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/free-remote-control/index.html" class=""><a class="padding" href="../../network/free-remote-control/index.html">远程控制Homeassistant盒子<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           </ul>
@@ -312,8 +314,8 @@
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1725503859" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725503859" defer></script>
-    <script src="../../js/theme.js?1725503859" defer></script>
+    <script src="../../js/clipboard.min.js?1725508239" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725508239" defer></script>
+    <script src="../../js/theme.js?1725508239" defer></script>
   </body>
 </html>
