--- a/public/installation/hacs/index.html
+++ b/public/installation/hacs/index.html
@@ -22,22 +22,22 @@
     <meta itemprop="description" content="一、HACS是什么 HACS 是一个全面的、社区驱动的插件管理系统 ，专为Google的开源 智能家居 平台 Home Assistant 设计。 通过HACS，你可以方便地发现、安装和管理与Home Assistant兼容的各种插件，包括自定义集成、面板、配置器和其他小部件。">
     <meta itemprop="wordCount" content="32">
     <meta itemprop="image" content="http://localhost:1313/images/hero.png">
-    <meta itemprop="keywords" content="Documentation">
+    <meta itemprop="keywords" content="HACS安装,HACS激活">
     <title>HACS安装激活 :: HaBox 技术支持站</title>
     <link href="../../installation/hacs/index.xml" rel="alternate" type="application/rss+xml" title="HACS安装激活 :: HaBox 技术支持站">
     <link href="../../installation/hacs/index.print.html" rel="alternate" type="text/html" title="HACS安装激活 :: HaBox 技术支持站"><link rel="icon" href="../../images/favicon.png" type="image/png">
 
-    <link href="../../css/fontawesome-all.min.css?1725502867" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725502867" rel="stylesheet"></noscript>
-    <link href="../../css/nucleus.css?1725502867" rel="stylesheet">
-    <link href="../../css/auto-complete.css?1725502867" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725502867" rel="stylesheet"></noscript>
-    <link href="../../css/perfect-scrollbar.min.css?1725502867" rel="stylesheet">
-    <link href="../../css/fonts.css?1725502867" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725502867" rel="stylesheet"></noscript>
-    <link href="../../css/theme.css?1725502867" rel="stylesheet">
-    <link href="../../css/theme-relearn-auto.css?1725502867" rel="stylesheet" id="R-variant-style">
-    <link href="../../css/chroma-relearn-auto.css?1725502867" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="../../css/variant.css?1725502867" rel="stylesheet">
-    <link href="../../css/print.css?1725502867" rel="stylesheet" media="print">
-    <script src="../../js/variant.js?1725502867"></script>
+    <link href="../../css/fontawesome-all.min.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fontawesome-all.min.css?1725508239" rel="stylesheet"></noscript>
+    <link href="../../css/nucleus.css?1725508239" rel="stylesheet">
+    <link href="../../css/auto-complete.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/auto-complete.css?1725508239" rel="stylesheet"></noscript>
+    <link href="../../css/perfect-scrollbar.min.css?1725508239" rel="stylesheet">
+    <link href="../../css/fonts.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="../../css/fonts.css?1725508239" rel="stylesheet"></noscript>
+    <link href="../../css/theme.css?1725508239" rel="stylesheet">
+    <link href="../../css/theme-relearn-auto.css?1725508239" rel="stylesheet" id="R-variant-style">
+    <link href="../../css/chroma-relearn-auto.css?1725508239" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="../../css/variant.css?1725508239" rel="stylesheet">
+    <link href="../../css/print.css?1725508239" rel="stylesheet" media="print">
+    <script src="../../js/variant.js?1725508239"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='..\/..';
@@ -110,7 +110,8 @@
             <header class="headline">
 <div class=" taxonomy-tags term-list cstyle  tags" title="标签" style="--VARIABLE-TAGS-BG-color: var(--INTERNAL-TAG-BG-color);">
   <ul>
-    <li><a class="term-link" href="../../tags/documentation/index.html">Documentation</a></li>
+    <li><a class="term-link" href="../../tags/hacs%E5%AE%89%E8%A3%85/index.html">HACS安装</a></li>
+    <li><a class="term-link" href="../../tags/hacs%E6%BF%80%E6%B4%BB/index.html">HACS激活</a></li>
   </ul>
 </div>
             </header>
@@ -122,35 +123,35 @@
 <h2 id="二安装hacs">二、安装HACS</h2>
 <p>由于Homeassistant的安装五花八门，所以网上有很多教程看上去非常复杂，但是在HA Box中安装HACS非常简单，下面我们一起来看看怎么安装。</p>
 <p>配置 - 设备与服务 ，在集成选项卡右下角点<strong>添加集成</strong>按钮</p>
-<p><a href="#R-image-6cdaaddee10d88b05e0f0c65a21779b5" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/646e80ca68cea28649631171ebf4b080391deba2.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-6cdaaddee10d88b05e0f0c65a21779b5"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/646e80ca68cea28649631171ebf4b080391deba2.jpeg"></a></p>
-<p><a href="#R-image-06dd5c905a1e8967932f27be0b897503" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7f8475698172de98cb56982a9863f0dacdef74f3.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-06dd5c905a1e8967932f27be0b897503"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7f8475698172de98cb56982a9863f0dacdef74f3.jpeg"></a></p>
+<p><a href="#R-image-91a171a5d99cec3ca06b43e155eee3f5" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/646e80ca68cea28649631171ebf4b080391deba2.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-91a171a5d99cec3ca06b43e155eee3f5"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/646e80ca68cea28649631171ebf4b080391deba2.jpeg"></a></p>
+<p><a href="#R-image-be3ba3892d94596f57813201747d5032" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7f8475698172de98cb56982a9863f0dacdef74f3.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-be3ba3892d94596f57813201747d5032"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7f8475698172de98cb56982a9863f0dacdef74f3.jpeg"></a></p>
 <p>在弹出窗口搜索HACS，你将看到HACS已经在列表里，然后点击它（整行随便点就行，右边的几个图标只是告诉你HACS的一些功能）</p>
-<p><a href="#R-image-4ec99df65cb3666b709b86f6f6215a50" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4ec99df65cb3666b709b86f6f6215a50"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9.jpeg"></a></p>
+<p><a href="#R-image-1ebcdbcab17b8a200e43b56ccedd4788" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1ebcdbcab17b8a200e43b56ccedd4788"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/7ef42a94fe5db252b248df68d3b63a40a7c8f5b9.jpeg"></a></p>
 <p>全勾选上，然后提交</p>
-<p><a href="#R-image-d528ead92e0dec7c4b9c77fd82846fb2" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/ee51e28640e1ccf768c04cec998f9325200c7452.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-d528ead92e0dec7c4b9c77fd82846fb2"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/ee51e28640e1ccf768c04cec998f9325200c7452.jpeg"></a></p>
+<p><a href="#R-image-ed920cf2328c39268b5fcd4e05b52cfd" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/ee51e28640e1ccf768c04cec998f9325200c7452.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ed920cf2328c39268b5fcd4e05b52cfd"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/ee51e28640e1ccf768c04cec998f9325200c7452.jpeg"></a></p>
 <p>接下来是打开链接，进到github.com有个授权的动作</p>
-<p><a href="#R-image-29c9b38ec1f64bce6d88a7528f938106" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d6a02518146386e9793c52f4200598aa7e8e9a6d.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-29c9b38ec1f64bce6d88a7528f938106"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d6a02518146386e9793c52f4200598aa7e8e9a6d.jpeg"></a></p>
+<p><a href="#R-image-1bcc6f4351bcee51b8876a209d59b196" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d6a02518146386e9793c52f4200598aa7e8e9a6d.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-1bcc6f4351bcee51b8876a209d59b196"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d6a02518146386e9793c52f4200598aa7e8e9a6d.jpeg"></a></p>
 <p>不出以外的话，你将看到这个页面，复制刚才弹窗给你的验证码，直接鼠标全选上复制过去直接粘贴，然后点 Continue 继续</p>
-<p><a href="#R-image-3373940691d39191576c0b41bccf51ff" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/096b8d5fab1cbb4372edccd400f22dbf5b22579c.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-3373940691d39191576c0b41bccf51ff"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/096b8d5fab1cbb4372edccd400f22dbf5b22579c.png"></a></p>
+<p><a href="#R-image-3659e737724aa662b2382b2a65f35a95" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/096b8d5fab1cbb4372edccd400f22dbf5b22579c.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-3659e737724aa662b2382b2a65f35a95"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/096b8d5fab1cbb4372edccd400f22dbf5b22579c.png"></a></p>
 <p>有时候会因为种种原因出现下面这个弹窗提示<strong>cloud_not_register</strong>,网络问题直接关闭从头再来多试几次</p>
 <p>如果出现下面这个页面说明你刚才的验证码没输错，可以点击Authorize hacs授权了</p>
-<p><a href="#R-image-9660ac887eb671a7eb2a544e58327639" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f0c8d06fa2176e0832ba8532c56e1b013a2499e7.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-9660ac887eb671a7eb2a544e58327639"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f0c8d06fa2176e0832ba8532c56e1b013a2499e7.jpeg"></a></p>
+<p><a href="#R-image-515dfba80d9aa8422e5aaf5852152097" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/f0c8d06fa2176e0832ba8532c56e1b013a2499e7.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-515dfba80d9aa8422e5aaf5852152097"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/f0c8d06fa2176e0832ba8532c56e1b013a2499e7.jpeg"></a></p>
 <p>OK,到这里说明已经配置成功了，可以关闭这个页面了。</p>
-<p><a href="#R-image-698b94080ba727423f95c5feee7e9284" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a7f6b1024805fa524a0d85d853081d3c184facda.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-698b94080ba727423f95c5feee7e9284"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a7f6b1024805fa524a0d85d853081d3c184facda.png"></a></p>
+<p><a href="#R-image-57ac082dbdabfd54f7de21803291298f" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/a7f6b1024805fa524a0d85d853081d3c184facda.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-57ac082dbdabfd54f7de21803291298f"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/a7f6b1024805fa524a0d85d853081d3c184facda.png"></a></p>
 <p>返回到Homeassistant,HACS已经配置成功，并自动发现了家里的一些设备，可以对区域进行配置，告诉HACS这个设备是在客厅还是在卧室或者别的房间。当然你也可以直接点关闭或完成。</p>
-<p><a href="#R-image-4afd5117c8d840191094914a45de20c6" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/eabec53c489ed0f40401fe3d59537fbed6f7d9ec.png" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4afd5117c8d840191094914a45de20c6"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/eabec53c489ed0f40401fe3d59537fbed6f7d9ec.png"></a></p>
+<p><a href="#R-image-a5e7352385b8c9669fae8e81524af5a6" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/eabec53c489ed0f40401fe3d59537fbed6f7d9ec.png" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-a5e7352385b8c9669fae8e81524af5a6"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/eabec53c489ed0f40401fe3d59537fbed6f7d9ec.png"></a></p>
 <p>看，左侧已经出现HACS的连接，集成里面已配置列表已经有HACS了。</p>
-<p><a href="#R-image-aa0540e641df64e3b9e52a5ed768a468" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c535214811638b31d0ebea7cf29975b2ca6e11.jpeg" style=" height: auto; width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-aa0540e641df64e3b9e52a5ed768a468"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c535214811638b31d0ebea7cf29975b2ca6e11.jpeg"></a></p>
+<p><a href="#R-image-eebf6bf88a9e3cde18d9f7f5f2a5ca46" class="lightbox-link"><img alt="image" class="noborder lazy lightbox noshadow figure-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c535214811638b31d0ebea7cf29975b2ca6e11.jpeg" style=" height: auto; width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-eebf6bf88a9e3cde18d9f7f5f2a5ca46"><img alt="image" class="noborder lazy lightbox noshadow lightbox-image" loading="lazy" src="https://pic.456766.xyz/typora/d2c535214811638b31d0ebea7cf29975b2ca6e11.jpeg"></a></p>
 <p>此时你可能需要重启一下HA Box缓解一下激动的心情了</p>
 
             <footer class="footline">
@@ -223,13 +224,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="../../js/auto-complete.js?1725502867" defer></script>
-        <script src="../../js/lunr/lunr.min.js?1725502867" defer></script>
-        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725502867" defer></script>
-        <script src="../../js/lunr/lunr.multi.min.js?1725502867" defer></script>
-        <script src="../../js/lunr/lunr.en.min.js?1725502867" defer></script>
-        <script src="../../js/lunr/lunr.zh.min.js?1725502867" defer></script>
-        <script src="../../js/search.js?1725502867" defer></script>
+        <script src="../../js/auto-complete.js?1725508239" defer></script>
+        <script src="../../js/lunr/lunr.min.js?1725508239" defer></script>
+        <script src="../../js/lunr/lunr.stemmer.support.min.js?1725508239" defer></script>
+        <script src="../../js/lunr/lunr.multi.min.js?1725508239" defer></script>
+        <script src="../../js/lunr/lunr.en.min.js?1725508239" defer></script>
+        <script src="../../js/lunr/lunr.zh.min.js?1725508239" defer></script>
+        <script src="../../js/search.js?1725508239" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -246,6 +247,8 @@
           <li data-nav-id="/access/mijia/index.html" class=""><a class="padding" href="../../access/mijia/index.html">将米家设备接入HomeAssistant<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/network/index.html" class=""><input type="checkbox" id="R-section-45bc2156b004e8b8b20d1da2c598bd4d" aria-controls="R-subsections-45bc2156b004e8b8b20d1da2c598bd4d"><label for="R-section-45bc2156b004e8b8b20d1da2c598bd4d"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单网络技术</span></label><a class="padding" href="../../network/index.html">网络技术<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-45bc2156b004e8b8b20d1da2c598bd4d" class="morespace collapsible-menu">
           <li data-nav-id="/network/habox-over-greatwall/index.html" class=""><a class="padding" href="../../network/habox-over-greatwall/index.html">Ha盒子配置科学上网<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/network/linux-partition/index.html" class=""><a class="padding" href="../../network/linux-partition/index.html">linux下无损扩容分区方法<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/network/docker-pull/index.html" class=""><a class="padding" href="../../network/docker-pull/index.html">从 Docker Hub 快速拉取镜像<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/free-vless-node/index.html" class=""><a class="padding" href="../../network/free-vless-node/index.html">搭建免费科学上网节点<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/free-remote-control/index.html" class=""><a class="padding" href="../../network/free-remote-control/index.html">远程控制Homeassistant盒子<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           </ul>
@@ -313,8 +316,8 @@
       </div>
     </aside>
 
-    <script src="../../js/clipboard.min.js?1725502867" defer></script>
-    <script src="../../js/perfect-scrollbar.min.js?1725502867" defer></script>
-    <script src="../../js/theme.js?1725502867" defer></script>
+    <script src="../../js/clipboard.min.js?1725508239" defer></script>
+    <script src="../../js/perfect-scrollbar.min.js?1725508239" defer></script>
+    <script src="../../js/theme.js?1725508239" defer></script>
   </body>
 </html>
