--- a/public/search.html
+++ b/public/search.html
@@ -25,17 +25,17 @@
     <title>搜索 :: HaBox 技术支持站</title>
     <link href="http://localhost:1313/search.html" rel="canonical" type="text/html" title="搜索 :: HaBox 技术支持站"><link rel="icon" href="./images/favicon.png" type="image/png">
 
-    <link href="./css/fontawesome-all.min.css?1725503859" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1725503859" rel="stylesheet"></noscript>
-    <link href="./css/nucleus.css?1725503859" rel="stylesheet">
-    <link href="./css/auto-complete.css?1725503859" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1725503859" rel="stylesheet"></noscript>
-    <link href="./css/perfect-scrollbar.min.css?1725503859" rel="stylesheet">
-    <link href="./css/fonts.css?1725503859" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1725503859" rel="stylesheet"></noscript>
-    <link href="./css/theme.css?1725503859" rel="stylesheet">
-    <link href="./css/theme-relearn-auto.css?1725503859" rel="stylesheet" id="R-variant-style">
-    <link href="./css/chroma-relearn-auto.css?1725503859" rel="stylesheet" id="R-variant-chroma-style">
-    <link href="./css/variant.css?1725503859" rel="stylesheet">
-    <link href="./css/print.css?1725503859" rel="stylesheet" media="print">
-    <script src="./js/variant.js?1725503859"></script>
+    <link href="./css/fontawesome-all.min.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fontawesome-all.min.css?1725508239" rel="stylesheet"></noscript>
+    <link href="./css/nucleus.css?1725508239" rel="stylesheet">
+    <link href="./css/auto-complete.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/auto-complete.css?1725508239" rel="stylesheet"></noscript>
+    <link href="./css/perfect-scrollbar.min.css?1725508239" rel="stylesheet">
+    <link href="./css/fonts.css?1725508239" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="./css/fonts.css?1725508239" rel="stylesheet"></noscript>
+    <link href="./css/theme.css?1725508239" rel="stylesheet">
+    <link href="./css/theme-relearn-auto.css?1725508239" rel="stylesheet" id="R-variant-style">
+    <link href="./css/chroma-relearn-auto.css?1725508239" rel="stylesheet" id="R-variant-chroma-style">
+    <link href="./css/variant.css?1725508239" rel="stylesheet">
+    <link href="./css/print.css?1725508239" rel="stylesheet" media="print">
+    <script src="./js/variant.js?1725508239"></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.relBasePath='.';
@@ -168,13 +168,13 @@
         <script>
           var contentLangs=['en', 'zh'];
         </script>
-        <script src="./js/auto-complete.js?1725503859" defer></script>
-        <script src="./js/lunr/lunr.min.js?1725503859" defer></script>
-        <script src="./js/lunr/lunr.stemmer.support.min.js?1725503859" defer></script>
-        <script src="./js/lunr/lunr.multi.min.js?1725503859" defer></script>
-        <script src="./js/lunr/lunr.en.min.js?1725503859" defer></script>
-        <script src="./js/lunr/lunr.zh.min.js?1725503859" defer></script>
-        <script src="./js/search.js?1725503859" defer></script>
+        <script src="./js/auto-complete.js?1725508239" defer></script>
+        <script src="./js/lunr/lunr.min.js?1725508239" defer></script>
+        <script src="./js/lunr/lunr.stemmer.support.min.js?1725508239" defer></script>
+        <script src="./js/lunr/lunr.multi.min.js?1725508239" defer></script>
+        <script src="./js/lunr/lunr.en.min.js?1725508239" defer></script>
+        <script src="./js/lunr/lunr.zh.min.js?1725508239" defer></script>
+        <script src="./js/search.js?1725508239" defer></script>
       </div>
       <div id="R-homelinks" class="default-animation">
         <hr class="padding">
@@ -191,6 +191,8 @@
           <li data-nav-id="/access/mijia/index.html" class=""><a class="padding" href="./access/mijia/index.html">将米家设备接入HomeAssistant<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           <li data-nav-id="/network/index.html" class=""><input type="checkbox" id="R-section-45bc2156b004e8b8b20d1da2c598bd4d" aria-controls="R-subsections-45bc2156b004e8b8b20d1da2c598bd4d"><label for="R-section-45bc2156b004e8b8b20d1da2c598bd4d"><i class="fa-fw fas fa-chevron-down"></i><i class="fa-fw fas fa-chevron-right"></i><span class="a11y-only">子菜单网络技术</span></label><a class="padding" href="./network/index.html">网络技术<i class="fa-fw fas fa-check read-icon"></i></a><ul id="R-subsections-45bc2156b004e8b8b20d1da2c598bd4d" class="morespace collapsible-menu">
           <li data-nav-id="/network/habox-over-greatwall/index.html" class=""><a class="padding" href="./network/habox-over-greatwall/index.html">Ha盒子配置科学上网<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/network/linux-partition/index.html" class=""><a class="padding" href="./network/linux-partition/index.html">linux下无损扩容分区方法<i class="fa-fw fas fa-check read-icon"></i></a></li>
+          <li data-nav-id="/network/docker-pull/index.html" class=""><a class="padding" href="./network/docker-pull/index.html">从 Docker Hub 快速拉取镜像<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/free-vless-node/index.html" class=""><a class="padding" href="./network/free-vless-node/index.html">搭建免费科学上网节点<i class="fa-fw fas fa-check read-icon"></i></a></li>
           <li data-nav-id="/network/free-remote-control/index.html" class=""><a class="padding" href="./network/free-remote-control/index.html">远程控制Homeassistant盒子<i class="fa-fw fas fa-check read-icon"></i></a></li></ul></li>
           </ul>
@@ -258,8 +260,8 @@
       </div>
     </aside>
 
-    <script src="./js/clipboard.min.js?1725503859" defer></script>
-    <script src="./js/perfect-scrollbar.min.js?1725503859" defer></script>
-    <script src="./js/theme.js?1725503859" defer></script>
+    <script src="./js/clipboard.min.js?1725508239" defer></script>
+    <script src="./js/perfect-scrollbar.min.js?1725508239" defer></script>
+    <script src="./js/theme.js?1725508239" defer></script>
   </body>
 </html>
